Fix ticket-number label being uneven

--- a/src/onegov.org/onegov/org/theme/styles/org.scss
+++ b/src/onegov.org/onegov/org/theme/styles/org.scss
@@ -1769,7 +1769,7 @@ $ticket-number-bg: $yellow-light;
 
 .ticket-number {
     @include label(
-        $padding: .25rem .5rem .1rem,
+        $padding: .25rem .5rem .25rem,
         $text-size: 1rem,
         $bg: $ticket-number-bg
     );
